# voiceTTS

./: .env.example  .gitignore  DOWNLOAD_MODELS.BAT  INSTALL.BAT  README.md  START.BAT  STOP.BAT  download_models.py  index.html  install_whisper.py  package.json  tailwind.config.js  vite.config.ts
backend/: main.py  requirements.txt
backend/api/: clone.py  engines.py  realtime.py  story.py  transcribe.py  tts.py
backend/audio/: chunker.py  processor.py  transcriber.py
backend/db/: database.py  models.py
backend/engines/: __init__.py  base.py  chatterbox.py  cosyvoice.py  qwen3_cloud.py  qwen3_local.py
backend/realtime/: converter.py
backend/voice_clone/: preview.py  qwen3_clone.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/BackendStatus/: index.tsx
src/components/Layout/: index.tsx
src/components/Sidebar/: index.tsx
src/components/WaveformPlayer/: index.tsx
src/hooks/: useTTSJob.ts
src/lib/: apiClient.ts
src/pages/RealTime/: index.tsx
src/pages/Settings/: index.tsx
src/pages/StoryEditor/: index.tsx
src/pages/TTS/: index.tsx
src/pages/VoiceClone/: index.tsx
src/pages/VoiceLibrary/: index.tsx
src/stores/: appStore.ts
