[package]
name = "voicetts"
version = "0.1.0"
description = "VoiceTTS - 語音合成與複製桌面應用程式"
authors = []
edition = "2021"

[lib]
name = "voicetts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "voicetts"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-notification = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
